--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const areas = [
 
       <div class="cta-row">
         <a class="btn primary" href="/research">Read research</a>
-        <a class="btn" href="mailto:contact@orion-labs.tech">Contact</a>
+        <a class="btn" href="mailto:info@orion-labs.tech">Contact</a>
       </div>
 
       <div class="hr"></div>
