Introduction of Tailwind (astro integration) + Flowbite

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -51,5 +51,8 @@ const nav = [
         </div>
       </div>
     </footer>
+    <script>
+    import "flowbite";
+    </script>
   </body>
 </html>
